kubernetes/overlays/prod/env.example.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: minecharts
spec:
  rules:
    - host: minecharts.example.com
      http:
        paths:
          - pathType: Prefix
            path: /api
            backend:
              service:
                name: minecharts-api
                port:
                  number: 8080
          - pathType: Prefix
            path: /
            backend:
              service:
                name: minecharts-web
                port:
                  number: 80
  tls:
    - hosts:
        - minecharts.example.com

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: minecharts-api
  namespace: minecharts
spec:
  template:
    spec:
      containers:
        - name: minecharts-api
