kubernetes/overlays/prod/ingress-patch.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: minecharts
  annotations:
    traefik.ingress.kubernetes.io/router.middlewares: minecharts-prod-minecharts-api-strip@kubernetescrd
